change comment submit function to be able collect all the comments left by users

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header> 
-        <h2>What I like to do on the lake TAHOE</h2>
+        <h2>Lake Tahoe Activity Guide</h2>
     </header>
     <form id = "sort">
         <select id = "season">
